--- a/Island/package.json
+++ b/Island/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "echart": "^0.1.3",
     "mint-ui": "^2.2.13",
+    "style-loader": "^0.23.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
