--- a/Island/package.json
+++ b/Island/package.json
@@ -14,10 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "alias": "0.0.5",
     "echart": "^0.1.3",
     "mint-ui": "^2.2.13",
+    "node-uuid": "^1.4.8",
+    "resource": "^0.8.1",
     "style-loader": "^0.23.0",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
